--- a/CSS/style.css
+++ b/CSS/style.css
@@ -375,12 +375,12 @@ aside img {
 .images {
     display: flex;
     font-size: small;
+    flex-flow: row wrap;
+    justify-content: space-between
 }
 
 .main_activites h2 {
-    margin-top: 40px;
     padding-left: 10px;
-    margin-bottom: -30px;
 }
 
 .images .img_h3 img {
@@ -397,9 +397,7 @@ aside img {
     box-shadow: 0 4px 4px 0 var(--grey);
     transition: 0.3s;
     border-radius: 20px;
-    margin-top: 10px;
     padding:0;
-    margin: 55px;
     margin-left: 2px;
 }
 
@@ -411,9 +409,7 @@ aside img {
 
 footer {
     background-color: var(--grey);
-    width: 100%;
-    height: 210px;
-    margin-top: 50px;
+    margin-top: 35px;
 }
 
 .footer_container {
@@ -454,68 +450,4 @@ footer li {
     font-size: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-}
-
-/***Responsive_tablette***/
-
-@media screen and (max-width: 992px) {
-    body {
-        padding-left: 2,5%;
-        padding-right: 2,5%;
-        margin: 40px;
-        padding: 0;
-    }
-    .container_section_aside{
-        display: block;
-    }
-    
-   .populaires .card2 {
-        display: flex;
-        align-items: center;
-    }
-    
-   .section_hebergements .container_card{
-        margin-left: 38px;
-    }
-
-    .section_hebergements h2 {
-        margin-left: 38px;
-    }
-
-    .container_section {
-        margin-right: 0px;
-    }
-
-    .card {
-        margin: 30px;
-    }
-
-    .container_populaires {
-        margin: 10px;
-    }
-
-    .container_card2 {
-        display: flex;
-    }
-
-   .title_populaires {
-        margin: 10px 48px 12px 35px;
-    
-   }
-
-   .img_h3 {
-        width: 182px;
-        height: 267px;
-        margin-bottom: 50px;
-        padding-bottom: 50px;
-   }
-
-   footer {
-        width: 907px;
-        height: 225px;
-        margin-top: 135px;
-   }
-   
-
-   
 }
