--- a/CSS/style.css
+++ b/CSS/style.css
@@ -226,7 +226,7 @@ form {
     transition: 0.3s;
     border-radius: 20px;
     margin: 16px auto;
-    padding: 10px;
+    padding: 8px;
 }
 
 h2 {
@@ -357,6 +357,13 @@ aside img {
     margin-left: 110px;
     padding-left: 10px;
     padding-top: 30px;
+    font-size: 10px;
+}
+
+.star_populaires .p3 {
+    margin-left: 110px;
+    padding-left: 10px;
+    padding-top: 49px;
     font-size: 10px;
 }
 
