--- a/CSS/style_tablet.css
+++ b/CSS/style_tablet.css
@@ -10,21 +10,20 @@
     }
 
     .section_hebergements {
-        margin : 0px;
-        padding : 0px; 
+        margin: 48px 0px 49px 0px;
+        padding: 0px 0px 0px 0px;
     }
 
     .container_hebergements {
-        margin-top: 35px;
+        margin-top: 20px;
     }
          
     .section_hebergements h2 {
-        margin: 0px 0px 0px 20px;
-        padding: 35px 10px 0px 0px;
+        padding: 30px 0px 0px 29px;
     }
 
     .container_card {
-        justify-content: space-between;
+        margin: 13px;
     }
    
     .container_section {
@@ -33,14 +32,22 @@
 
     .afficher {
         margin: 0px 0px 47px 27px;
-        padding: 20px 0px 46px 10px;
+        padding: 20px 0px 46px 20px;
     }
     
-
     .star_populaires p {
         margin-left: 90px;
         padding-top: 40px;
-    } 
+    }
+
+    .star_populaires .p2{
+        padding-top: 24px;
+    }
+
+    .star_populaires .p3{
+        padding-left: 10px;
+        padding-top: 43px;
+    }
 
     .info_card2 h3 {
         padding-top: 0px;
@@ -51,10 +58,6 @@
     }
     .container_card2 {
         display: flex;
-    }
-
-    .card2 {
-
     }
 
     aside img {
@@ -75,19 +78,31 @@
    }
 
    .activites_a_marseille {
-        margin: 55px 0px 0px 0px;
+        margin: 74px 0px 55px 0px;
    }
-   
-    .colonnes {
 
-    }
-
-    footer {
-        width: 907px;
-        height: 225px;
-        margin-top: 135px;
+   .images {
+    display: flex;
+    font-size: small;
+    justify-content: space-between;
+    margin-top: 32px;
    }
-   
 
-   
+   .img_h3 {
+    height: 321px;
+    width: 184px;
+   }
+
+   .images .img_h3 img {
+    width: 184px;
+    height: 258px;
+   }
+
+   .colonnes .h3_3 {
+    margin: 10px;
+   }
+
+   .colonnes .h3_4 {
+    margin: 10px;
+   }
 }
