--- a/CSS/style_mobile.css
+++ b/CSS/style_mobile.css
@@ -55,16 +55,17 @@
         font-weight: bold;
         border: none;
         border-radius: 0px 18px 18px 0px;
-        display: inline;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }  
     
     /**Header_Filtres**/
 
-    .container {
-        flex-direction: column;
-        pointer-events: none;
+    .filtres {
+        display: inline-block
     }
-
+    
     /**Populaires et hébergements**/
     
     .container_section_aside {
