--- a/CSS/style_mobile.css
+++ b/CSS/style_mobile.css
@@ -7,7 +7,9 @@
     /**Header**/
 
     .container_header {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 
     .logo {
@@ -22,11 +24,15 @@
     nav ul {
         width: 100%;
         justify-content: center;
-        padding: 0px;
+        padding-left: 0px;
     }
 
     nav ul li {
         display: flex;
+    }
+
+    nav ul li a {
+        padding: 61px 40px 30px 40px;
     }
 
     nav ul li a:hover {
@@ -35,10 +41,18 @@
         color: var(--blue);
     }
 
-    header {
-        margin: 15px;
+    h1 {
+        font-size: 18px;
+    }
+
+    h2 {
+        font-size: 14px;
     }
     
+    .header_infos {
+        padding: 10px;
+    }
+
     /**Header Recherche**/
 
     .button {
@@ -70,9 +84,11 @@
     }
 
     .container .filtres1 {
-        cursor: none;
+        width: 42%;
+        font-size: 11px;
+        margin: 4px;
     }
-    
+       
     /**Populaires et hébergements**/
     
     .container_section_aside {
@@ -85,10 +101,12 @@
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
+        border-radius: 0px;
     }
 
     .container_card2 {
         flex-direction: column;
+        padding: 0;
     }
 
     .title_populaires {
@@ -101,7 +119,7 @@
 
     .card2 {
         margin: 15px auto;
-        width: 335px;
+        width: 279px;
     }
     
     .section_hebergements {
@@ -125,12 +143,12 @@
     }
     
     .card {
-        width: 335px;
+        width: 282px;
         height: 180px;
     }
 
     .card img {
-        width: 328px;
+        width: 274px;
     }
 
     .afficher {
@@ -154,17 +172,17 @@
     }
 
     .main_activites h2 {
-        margin: auto;
+        margin-left: 10px;
     }
 
-    .img_h3{
+    .img_h3 {
         height: 210px;
-        width: 335px;
+        width: 279px;
         margin: 15px;
     }
 
     .images .img_h3 img {
-        width: 335px;
+        width: 279px;
         height: 157px; 
     }
 
@@ -179,4 +197,4 @@
     .footer_colums {
         padding: 0px;
     }
-  }
+}
