--- a/CSS/style_mobile.css
+++ b/CSS/style_mobile.css
@@ -14,36 +14,41 @@
 
     .logo {
         display: block;
-        margin: auto;
+        margin: 10px auto;
     }
 
     nav {
-        display: flex;
+        width: 100%;
     }
 
     nav ul {
-        width: 100%;
-        justify-content: center;
         padding-left: 0px;
+        margin-top: 50px;
     }
 
     nav ul li {
-        display: flex;
+        width: 50%;
+        height: 44px;
+        text-align: center;
+        border-bottom: 2px solid var(--grey)
     }
 
     nav ul li a {
-        padding: 61px 40px 30px 40px;
+        padding: 60px 40px 30px 23px;
     }
 
     nav ul li a:hover {
         border-top: none;
+    }
+
+    nav ul li:hover {
         border-bottom: 3px solid var(--blue);
         color: var(--blue);
     }
 
     h1 {
         font-size: 18px;
-        margin-bottom: 13px;
+        margin: 0px 0px 13px 0px;
     }
 
     h2 {
