--- a/CSS/style.css
+++ b/CSS/style.css
@@ -225,13 +225,13 @@ form {
 }
 
 .card {
-    display: flex;
     background-color : var(--white);
     box-shadow: 0 4px 4px 0 var(--box-shadow);
     transition: 0.3s;
     border-radius: 20px;
-    margin: 16px auto;
-    padding: 8px;
+    margin: 18px auto;
+    padding: 3px;
+    width: 217px;
 }
 
 h2 {
@@ -258,10 +258,10 @@ article a {
 
 .card img {
     border-radius: 20px 20px  0px 0px;
-    width: 196px;
+    width: 100%;
     height: 103px;
     padding: 0px;
-    margin: -4px;
+    margin: -9px 1px 0px 0px;
     object-fit: cover;
 }
 
@@ -283,6 +283,10 @@ article a {
     color: black;
     margin-left: 36px;
     margin-top: 30px;
+}
+
+.section1_text {
+    margin-left: 10px;
 }
 
 .section1_text p {
