--- a/CSS/style_tablet.css
+++ b/CSS/style_tablet.css
@@ -6,6 +6,10 @@ body {
     padding: 0;
 }
 
+.container .filtres1 {
+    font-size: 11px;
+}
+
 /**Hébergements**/
 
 .container_section_aside{
@@ -26,7 +30,7 @@ body {
 }
 
 .container_card {
-    margin: 13px;
+    margin: 20px;
 }
 
 .container_section {
@@ -38,13 +42,19 @@ body {
     padding: 20px 0px 46px 20px;
 }
 
+.card {
+    width: 194px;
+}
+
 /**Populaires**/
 
 .container_populaires {
     margin: 0px;
+    padding: 1px 2px 22px 0px;
 }
 .container_card2 {
     display: flex;
+    padding: 0;
 }
 
 aside img {
@@ -52,7 +62,8 @@ aside img {
 }
 
 .title_populaires {
-        margin: 10px 48px 12px 35px;
+    margin: 10px 48px 12px 35px;
+    padding: 0;
 }
 
 /**Activités à Marseille**/
@@ -70,11 +81,11 @@ aside img {
 
 .img_h3 {
     height: 321px;
-    width: 184px;
+    width: 170px;
 }
 
 .images .img_h3 img {
-    width: 184px;
+    width: 170px;
     height: 258px;
 }
 
